force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/Resource_Overbooking_to_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction Object between AH_Resource_Planner_Overbooking__c &amp; pse__Assignment__c</description>
    <label>Resource Overbooking to Assignment</label>
    <nameField>
        <displayFormat>O2A-{0000000}</displayFormat>
        <label>Resource Overbooking to Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Overbookings to Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>