force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <description>NICC-036706</description>
    <inlineHelpText>Junction object link to Assignment record related to a Resource Planner Overbooking record</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>pse__Assignment__c</referenceTo>
    <relationshipLabel>Resource Overbookings to Assignments</relationshipLabel>
    <relationshipName>Resource_Overbooking_to_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>