force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Assignment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_End_Date__c</fullName>
    <description>NICC-036706</description>
    <formula>Assignment__r.pse__End_Date__c</formula>
    <inlineHelpText>Displays the End Date from related Assignment record</inlineHelpText>
    <label>Assignment End Date</label>
    <type>Date</type>
</CustomField>