force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Assignment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Start_Date__c</fullName>
    <description>NICC-036706</description>
    <formula>Assignment__r.pse__Start_Date__c</formula>
    <inlineHelpText>Displays the Start Date from related Assignment record</inlineHelpText>
    <label>Assignment Start Date</label>
    <type>Date</type>
</CustomField>