force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036706</description>
    <inlineHelpText>User who created the block that potentially caused the day to be overbooked.</inlineHelpText>
    <label>Blocked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Overbookings_to_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>