force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>NICC-036706 Contact Id from the linked Resource Planner Overbooking. Denormalized reference for ease in purging records that are no longer in overbooked state.</description>
    <formula>Resource_Planner_Overbooking__r.Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Id</label>
    <type>Text</type>
</CustomField>