force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Hours_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Blocked__c</fullName>
    <description>NICC-036706</description>
    <inlineHelpText>The hours that entered for this day on a PSA Schedule or Schedule Exception record for related Assignment record</inlineHelpText>
    <label>Hours Blocked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>