force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Hours_Booked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Booked__c</fullName>
    <description>NICC-036706</description>
    <formula>Resource_Planner_Overbooking__r.Hours_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total hours block on this day from related Resource Planner Overbooking record.</inlineHelpText>
    <label>Hours Booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>