force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/IsOverbooked__c.field-meta.xml
<CustomField>
    <fullName>IsOverbooked__c</fullName>
    <description>NICC-036706 Overbooked checkbox from the linked Resource Planner Overbooking. Denormalized reference for ease in purging records that are no longer in overbooked state.</description>
    <formula>Resource_Planner_Overbooking__r.IsOverbooked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overbooked</label>
    <type>Checkbox</type>
</CustomField>