force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Overbooked_Date__c.field-meta.xml
<CustomField>
    <fullName>Overbooked_Date__c</fullName>
    <description>NICC-036706</description>
    <formula>Resource_Planner_Overbooking__r.Booked_Date__c</formula>
    <inlineHelpText>The day that what overbooked</inlineHelpText>
    <label>Overbooked Date</label>
    <type>Date</type>
</CustomField>