force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Resource_Manager__c.field-meta.xml
<CustomField>
    <fullName>Resource_Manager__c</fullName>
    <description>NICC-036706</description>
    <formula>Resource_Planner_Overbooking__r.Contact__r.pse__Salesforce_User__r.Manager.FirstName + &quot; &quot; + Resource_Planner_Overbooking__r.Contact__r.pse__Salesforce_User__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Resource Manager&apos;s Name from the related Resource Planner Overbooking record</inlineHelpText>
    <label>Resource Manager</label>
    <type>Text</type>
</CustomField>