force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Resource_Planner_Overbooking__c.field-meta.xml
<CustomField>
    <fullName>Resource_Planner_Overbooking__c</fullName>
    <description>NICC-036706</description>
    <inlineHelpText>Junction object link to Resource Planner Overbooking record related to an Assignment record</inlineHelpText>
    <label>Resource Planner Overbooking</label>
    <referenceTo>AH_Resource_Planner_Overbooking__c</referenceTo>
    <relationshipLabel>Resource Overbooking to Assignments</relationshipLabel>
    <relationshipName>Resource_Overbooking_to_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>