force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Schedule_Exception__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-036706</description>
    <inlineHelpText>Denotes if the block is from a Schedule Exception</inlineHelpText>
    <label>Schedule Exception</label>
    <type>Checkbox</type>
</CustomField>