force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>NICC-036706 - Year from the linked Resource Planner Overbooking. Denormalized reference for ease in purging records that are no longer in overbooked state.</description>
    <formula>Resource_Planner_Overbooking__r.Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>