force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource_Planner_Overbooking__c</columns>
    <columns>Resource__c</columns>
    <columns>Overbooked_Date__c</columns>
    <columns>Hours_Booked__c</columns>
    <columns>Hours_Over__c</columns>
    <columns>Assignment__c</columns>
    <columns>Blocked_By__c</columns>
    <columns>Hours_Blocked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>