force-app/main/default/objects/Resource_Overbooking_to_Assignment__c/listViews/Overblocker.listView-meta.xml
<ListView>
    <fullName>Overblocker</fullName>
    <columns>NAME</columns>
    <columns>Resource_Planner_Overbooking__c</columns>
    <columns>Resource__c</columns>
    <columns>Overbooked_Date__c</columns>
    <columns>Hours_Booked__c</columns>
    <columns>Hours_Over__c</columns>
    <columns>Assignment__c</columns>
    <columns>Blocked_By__c</columns>
    <columns>Hours_Blocked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blocked_By__c</field>
        <operation>equals</operation>
        <value>Rich Launchbury</value>
    </filters>
    <filters>
        <field>Overbooked_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2019</value>
    </filters>
    <filters>
        <field>Overbooked_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>10/31/2019</value>
    </filters>
    <label>Overblocker</label>
    <language>en_US</language>
</ListView>